docs/compile_issue1_log2_20220520a.txt
"C:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\tools\\arm-none-eabi-gcc\\6-2017-q2-update/bin/arm-none-eabi-g++" -mcpu=cortex-m0 -mthumb "@C:\\Users\\Pranau\\AppData\\Local\\Temp\\arduino_build_419017/sketch/build_opt.h" -c -g -Os -w -std=gnu++14 -ffunction-sections -fdata-sections -nostdlib -fno-threadsafe-statics --param max-inline-insns-single=500 -fno-rtti -fno-exceptions -MMD "-IE:\\Training\\IoT\\oxyLED_Catena4610" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\cores\\arduino/avr" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\cores\\arduino/stm32" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\cores\\arduino/stm32/USB" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\system/Drivers/STM32L0xx_HAL_Driver/Inc/" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\system/Drivers/STM32L0xx_HAL_Driver/Src/" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\system/STM32L0xx/" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\system/Middlewares/ST/STM32_USB_Device_Library/Core/Inc" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\system/Middlewares/ST/STM32_USB_Device_Library/Core/Src" -DSTM32L0xx -DARDUINO=10819 -DARDUINO_MCCI_CATENA_4610 -DARDUINO_ARCH_STM32 -DARDUINO_STM32 -DARDUINO_STM32L0xx -DARDUINO_STM32L082xx -DSTM32L082xx -DCATENA_CFG_SYSCLK=32 -DUSBCON -DUSBD_VID=0x040E -DUSBD_PID=0x00A1 "-DUSB_MANUFACTURER=\"MCCI Corporation\"" "-DUSB_PRODUCT=\"MCCI Catena 4610\"" -DARDUINO_BSP_CONFIG_SERIAL_MASK=0x1 -D__CORTEX_SC=0 -DMCCI_CATENA_4610 -DCFG_us915=1 -DCFG_sx1276_radio=1 -DARDUINO_LMIC_PROJECT_CONFIG_H=lmic_config_preconditions.h -DARDUINO_LMIC_CFG_NETWORK_TTN=1 -DARDUINO_LMIC_CFG_SUBBAND=-1 -DMCCI_CATENA_461x_PA0_SWITCHES_VDD=0 "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\arduino\\tools\\CMSIS\\4.5.0/CMSIS/Include/" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\system/Drivers/CMSIS/Device/ST/STM32L0xx/Include/" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\system/Drivers/CMSIS/Device/ST/STM32L0xx/Source/Templates/gcc/" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\cores\\arduino" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\variants\\CATENA_461x" "-IC:\\Users\\Pranau\\Documents\\Arduino\\libraries\\DFRobot_OxygenSensor" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\libraries\\Wire\\src" "-IC:\\Users\\Pranau\\Documents\\Arduino\\libraries\\Catena-Arduino-Platform\\src" "-IC:\\Users\\Pranau\\Documents\\Arduino\\libraries\\Catena-mcciadk\\src" "-IC:\\Users\\Pranau\\Documents\\Arduino\\libraries\\arduino-lorawan\\src" "-IC:\\Users\\Pranau\\Documents\\Arduino\\libraries\\arduino-lmic\\src" "-IC:\\Users\\Pranau\\AppData\\Local\\Arduino15\\packages\\mcci\\hardware\\stm32\\3.0.5\\libraries\\SPI\\src" "-IC:\\Users\\Pranau\\Documents\\Arduino\\libraries\\MCCI_FRAM_I2C" "C:\\Users\\Pranau\\AppData\\Local\\Temp\\arduino_build_419017\\sketch\\oxyLED_Catena4610.ino.cpp" -o "C:\\Users\\Pranau\\AppData\\Local\\Temp\\arduino_build_419017\\sketch\\oxyLED_Catena4610.ino.cpp.o"
oxyLED_Catena4610:28:1: error: 'Catena' does not name a type
 Catena gCatena;
 ^~~~~~
oxyLED_Catena4610:29:1: error: 'StatusLed' does not name a type
 StatusLed gLed (Catena::PIN_STATUS_LED);
 ^~~~~~~~~
E:\Training\IoT\oxyLED_Catena4610\oxyLED_Catena4610.ino: In function 'void setup()':
oxyLED_Catena4610:57:3: error: 'gCatena' was not declared in this scope
   gCatena.begin();
   ^~~~~~~
oxyLED_Catena4610:58:3: error: 'gLed' was not declared in this scope
   gLed.begin();
   ^~~~
Using library DFRobot_OxygenSensor at version 1.0.0 in folder: C:\Users\Pranau\Documents\Arduino\libraries\DFRobot_OxygenSensor 
Using library Wire at version 1.0 in folder: C:\Users\Pranau\AppData\Local\Arduino15\packages\mcci\hardware\stm32\3.0.5\libraries\Wire 
Using library Catena-Arduino-Platform at version 0.21.2 in folder: C:\Users\Pranau\Documents\Arduino\libraries\Catena-Arduino-Platform 
Using library Catena-mcciadk at version 0.2.2 in folder: C:\Users\Pranau\Documents\Arduino\libraries\Catena-mcciadk 
Using library arduino-lorawan at version 0.9.1 in folder: C:\Users\Pranau\Documents\Arduino\libraries\arduino-lorawan 
Using library arduino-lmic at version 4.1.1 in folder: C:\Users\Pranau\Documents\Arduino\libraries\arduino-lmic 
Using library SPI at version 1.0 in folder: C:\Users\Pranau\AppData\Local\Arduino15\packages\mcci\hardware\stm32\3.0.5\libraries\SPI 
Using library MCCI_FRAM_I2C at version 2.0.0 in folder: C:\Users\Pranau\Documents\Arduino\libraries\MCCI_FRAM_I2C 
exit status 1
'Catena' does not name a type
